@@ -7,6 +7,7 @@ SUBDIRS = doc
 GUILE = `if test -f ../guile/libguile/guile ; then echo ../guile/libguile/guile; else echo guile ; fi`
 CGENFLAGS = -v
 ARCH = @arch@
+ARCHFILE = $(srcroot)/../cpu/$(ARCH).cpu
 
 # for various utility rules
 MACHS = all
@@ -33,10 +34,13 @@ stamp-cgen: $(CGENFILES)
 # though most of these are for development purposes only.
 # When actually building the toolchain, the Makefile in the appropriate
 # directory will run cgen.
+#
+# NOTE: If running for a cpu other than the configured one you may wish to
+# override ISAS and MACHS.
 
 # Build the basic description support.
 # We just stuff them in tmp-* files.
-# Usage: make desc ARCH=<arch> OPTIONS="<option list>"
+# Usage: make desc [ARCHFILE=<arch-file>] OPTIONS="<option list>"
 
 .PHONY: desc
 # FIXME: needs more dependencies
@@ -46,11 +50,13 @@ desc: desc.scm
 		-s $(srcdir) \
 		$(CGENFLAGS) \
 		-f "$(OPTIONS)" \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-H tmp-desc.h -C tmp-desc.c
 
+# Build the machine generated cpu documentation.
+# Usage: make html [ARCH=<arch>] [ARCHFILE=<arch-file>]
 .PHONY: html
 html: desc.scm html.scm cgen-doc.scm
 	rm -f tmp-doc.html
@@ -58,7 +64,7 @@ html: desc.scm html.scm cgen-doc.scm
 		-s $(srcdir) \
 		$(CGENFLAGS) \
 		-f "$(OPTIONS)" \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-N $(INSN_FILE_NAME) \
@@ -69,7 +75,7 @@ html: desc.scm html.scm cgen-doc.scm
 
 # Build the opcodes files.
 # We just stuff them in tmp-* files.
-# Usage: make opcodes ARCH=<arch> OPTIONS="<option list>"
+# Usage: make opcodes [ARCHFILE=<arch-file>] OPTIONS="<option list>"
 
 .PHONY: opcodes
 # FIXME: needs more dependencies
@@ -80,7 +86,7 @@ opcodes: opcodes.scm
 		-s $(srcdir) \
 		$(CGENFLAGS) \
 		-f "$(OPTIONS) opinst" \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-O tmp-opc.h -P tmp-opc.c -Q tmp-opinst.c \
@@ -89,8 +95,8 @@ opcodes: opcodes.scm
 
 # Build the simulator files.
 # We just stuff them in tmp-* files.
-# Usage: make sim-arch ARCH=<arch> OPTIONS="<option list>"
-#        make sim-cpu ARCH=<arch> ISAS="<isa>" MACHS="<mach list>" \
+# Usage: make sim-arch [ARCHFILE=<arch-file>] OPTIONS="<option list>"
+#        make sim-cpu [ARCHFILE=<arch-file>] ISAS="<isa>" MACHS="<mach list>" \
 #          OPTIONS="<option list>"
 
 .PHONY: sim-arch sim-cpu
@@ -101,7 +107,7 @@ sim-arch: sim.scm
 		-s $(srcdir) \
 		$(CGENFLAGS) \
 		-f "$(OPTIONS)" \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-A tmp-arch.h -B tmp-arch.c -N tmp-cpuall.h
@@ -112,7 +118,7 @@ sim-cpu: sim.scm
 		-s $(srcdir) \
 		$(CGENFLAGS) \
 		-f "$(OPTIONS)" \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-C tmp-cpu.h -U tmp-cpu.c \
@@ -121,6 +127,7 @@ sim-cpu: sim.scm
 		-S tmp-semantics.c -X tmp-sem-switch.c
 
 # Build GAS testcase generator.
+# Usage: make gas-test [ARCHFILE=<arch-file>]
 
 .PHONY: gas-test
 gas-test: gas-test.scm cgen-gas.scm
@@ -131,13 +138,14 @@ gas-test: gas-test.scm cgen-gas.scm
 	$(GUILE) -s $(srcdir)/cgen-gas.scm \
 		-s $(srcdir) \
 		$(CGENFLAGS) \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-B gas-build.sh \
 		-E gas-allinsn.exp
 
 # Build simulator testcase generator.
+# Usage: make sim-test [ARCHFILE=<arch-file>]
 
 .PHONY: sim-test
 sim-test: sim-test.scm cgen-stest.scm
@@ -148,7 +156,7 @@ sim-test: sim-test.scm cgen-stest.scm
 	$(GUILE) -s $(srcdir)/cgen-stest.scm \
 		-s $(srcdir) \
 		$(CGENFLAGS) \
-		-a $(ARCH) \
+		-a $(ARCHFILE) \
 		-i "$(ISAS)" \
 		-m "$(MACHS)" \
 		-B sim-build.sh \
